--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "edge-of-the-empire-dice-roller",
+  "name": "Star-Wars-Imperial-Assault-dice-roller",
   "version": "2.3.0",
-  "description": "Dice roller for the star wars edge of the empire rpg",
+  "description": "Discord bot companion for Star Wars Imperial Assault",
   "main": "bot.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/SkyJedi/SWEotE-Discord-Dice-Roller"
+    "url": "git+https://github.com/gustavoberman/SWIA-Discord-Dice-Roller"
   },
   "dependencies": {
     "discord.js": "^11.3.2",
@@ -16,7 +16,8 @@
     "start": "node bot.js"
   },
   "keywords": [
-    "eote",
+    "star wars",
+    "imperial assault",
     "dice",
     "roller",
     "discord",
